<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:expandedTitleTextAppearance="@style/TransparentText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp15">

                <TextView
                    android:id="@+id/tvTittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/hi_everyone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSubtittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/how_do_you_feel_today"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTittle" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ilSearch"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSubtittle"
                    app:startIconDrawable="@drawable/ic_search"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corners"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/black"
                        android:focusableInTouchMode="true"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/search"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:maxLines="2"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/dp20"
                    app:cardCornerRadius="@dimen/dp15"
                    app:cardElevation="@dimen/dp10"
                    android:backgroundTint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/ilSearch">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dp15"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/bloodAvailableCard"
                                    android:layout_width="70dp"
                                    android:padding="@dimen/dp10"
                                    android:backgroundTint="@android:color/white"
                                    app:cardCornerRadius="@dimen/dp10"
                                    app:cardElevation="@dimen/dp5"
                                    android:layout_height="70dp">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/blood"/>

                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:id="@+id/tvCheckBlood"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:text="@string/check_blood_availability"
                                    android:textColor="@color/black"
                                    android:textAlignment="center"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/tvTittle" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/hospitalCard"
                                    android:layout_width="70dp"
                                    android:padding="@dimen/dp10"
                                    android:backgroundTint="@android:color/white"
                                    app:cardCornerRadius="@dimen/dp10"
                                    app:cardElevation="@dimen/dp5"
                                    android:layout_height="70dp">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/hospital"/>

                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:id="@+id/tvHospital"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:textAlignment="center"
                                    android:text="@string/hospital"
                                    android:textColor="@color/black"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/tvTittle" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="@dimen/dp10">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/mapsCard"
                                    android:layout_width="70dp"
                                    android:padding="@dimen/dp10"
                                    android:backgroundTint="@android:color/white"
                                    app:cardCornerRadius="@dimen/dp10"
                                    app:cardElevation="@dimen/dp5"
                                    android:layout_height="70dp">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/maps"/>

                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:id="@+id/tvMaps"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:text="@string/maps"
                                    android:textColor="@color/black"
                                    android:textAlignment="center"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/tvTittle" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/checkcLocationCard"
                                    android:layout_width="70dp"
                                    android:padding="@dimen/dp10"
                                    android:backgroundTint="@android:color/white"
                                    app:cardCornerRadius="@dimen/dp10"
                                    app:cardElevation="@dimen/dp5"
                                    android:layout_height="70dp">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/location"/>

                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:id="@+id/tvCheckLokasi"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:textAlignment="center"
                                    android:text="@string/check_location"
                                    android:textColor="@color/black"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/tvTittle" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <TextView
            android:id="@+id/tvTopBlood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/top_blood_bag"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardItem" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerBloodBag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp5"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>